created the table result

--- a/index.html
+++ b/index.html
@@ -70,6 +70,36 @@
                 </ul>
             </form>
         </section>
+        <section>
+            <header>
+                <h2>Book lists</h2>
+            </header>
+            <table>
+                <colgroup span="6"> </colgroup>
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Genre</th>
+                    <th scope="col">Pages</th>
+                    <th scope="col">Read</th>
+                    <th scope="col">Delete</th>
+                </tr>
+                <!-- <tr>
+                    <td id="title-text"></td>
+                    <td id="author-text"></td>
+                    <td id="genre-text"></td>
+                    <td id="page-number"></td>
+                    <td id="read-status">
+                        <label for="checkbox"></label>
+                        <input type="checkbox" name="checkbox" id="checkbox">
+                    </td>
+                    <td id="delete"><svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.5 1L9.5 0H4.5L3.5 1H0V3H14V1H10.5ZM1 16C1 17.1 1.9 18 3 18H11C12.1 18 13 17.1 13 16V4H1V16ZM3 6H11V16H3V6Z" fill="#747474"/>
+                        </svg>
+                    </td>
+                </tr> -->
+            </table>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
