showed some book lists

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </li>
                     <li>
                         <label for="genre">Book genre</label>
-                        <select name="genre" id="gnere">
+                        <select name="genre" id="genre">
 							<option value="fantasy">Fantasy</option>
 							<option value="it">IT</option>
 							<option value="design">Design</option>
@@ -84,8 +84,8 @@
                     <th scope="col">Read</th>
                     <th scope="col">Delete</th>
                 </tr>
-                <!-- <tr>
-                    <td id="title-text"></td>
+                <!-- <tr id="book-lists"> -->
+                <!-- <td id="title-text"></td>
                     <td id="author-text"></td>
                     <td id="genre-text"></td>
                     <td id="page-number"></td>
@@ -96,8 +96,8 @@
                     <td id="delete"><svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10.5 1L9.5 0H4.5L3.5 1H0V3H14V1H10.5ZM1 16C1 17.1 1.9 18 3 18H11C12.1 18 13 17.1 13 16V4H1V16ZM3 6H11V16H3V6Z" fill="#747474"/>
                         </svg>
-                    </td>
-                </tr> -->
+                    </td> -->
+                <!-- </tr> -->
             </table>
         </section>
     </main>
